Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46449

QFileSystemWatcher::removePath and removePaths does not work

XMLWordPrintable

    • bf440c18bb60a6964b32778157db2a22b168e946 (qtbase/5.5, 9.6.2015, 5.5.1)

      If two or more files is added with addPath() and then removePath is called to the files, not all files will be removed. removePaths does not work either with two or more files.

        1. QTBUG-46449.zip
          0.9 kB
        2. qtbug46449.zip
          1 kB
        3. qtbug46449_log.txt
          4 kB
        4. qtbug46449_diag.diff
          5 kB
        5. test_filesystemwatcher.cpp
          4 kB
        For Gerrit Dashboard: QTBUG-46449
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes